--- a/src/sass/blocks/small-blocks/social.sass
+++ b/src/sass/blocks/small-blocks/social.sass
@@ -6,6 +6,8 @@
   align-items: center
   &__item
     margin-right: 1.5rem
+    +md-block
+      margin-right: 1rem
     &:last-child
       margin-right: 0
   &__link
@@ -18,3 +20,6 @@
     height: 2.5rem
     fill: $main-color
     +trans
+    +md-block
+      width: 1.6rem
+      height: 1.6rem
