--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -16,3 +16,5 @@
 @import 'blocks/modal'
 @import 'blocks/small-blocks/small-blocks'
 @import 'blocks/header/header'
+@import 'blocks/hero/hero'
+@import 'blocks/about/about'
