--- a/src/sass/blocks/nav.sass
+++ b/src/sass/blocks/nav.sass
@@ -1,6 +1,55 @@
 .nav
+  +md-block
+    position: fixed
+    top: 0
+    right: 0
+    height: 100%
+    width: 30vw
+    min-width: 320px
+    padding: 4rem 1rem 1rem
+    background-color: #fff
+    box-shadow: 0 0 10px rgba(#000, 0.1)
+    transform: translateX(150%)
+    z-index: 10
+    overflow-y: auto
+    +smooth-scroll
+    +trans
+    &.open
+      transform: translateX(0)
   &__close
     display: none
+    +md-block
+      position: absolute
+      top: 1rem
+      right: 1rem
+      display: block
+      width: 2rem
+      height: 2rem
+      background: none
+      border: none
+      padding: 0
+      &::before, &::after
+        content: ''
+        position: absolute
+        left: 0
+        width: 100%
+        height: 0.2rem
+        background-color: $main-color
+      &::before
+        transform: rotate(45deg)
+      &::after
+        transform: rotate(-45deg)
+      &:focus
+        outline: none
+
+  &__mobile
+    display: none
+    +md-block
+      display: flex
+      flex-direction: column
+      margin-top: 2rem
+      & > *:not(:last-child)
+        margin-bottom: 1.5rem
 
 .nav-list
   margin: 0
@@ -9,51 +58,67 @@
   display: flex
   align-items: center
   line-height: 1
+  +md-block
+    display: block
   li
     margin-right: 2.5rem
+    +lg-block
+      margin-right: 2rem
+    +md-block
+      margin-right: 0
+      margin-bottom: 0.8rem
     &:last-child
       margin-right: 0
+      +md-block
+        margin-bottom: 0
   a
     font-size: 1.7rem
     line-height: 1
+    +lg-block
+      font-size: 1.3rem
+    +md-block
+      font-size: 1rem
+      line-height: 1.3
 
 
 .nav-toggle
   display: none
   position: absolute
   right: 0
-  top: 17px
-  width: 28px
-  height: 15px
+  bottom: 0
+  width: 9.78vw
+  height: 7.06vw
   padding: 0
   margin: 0
   outline: none
   border: none
   background: none
-  z-index: 10
+  z-index: 1
   cursor: pointer
+  +md-block
+    display: block
   &:focus
     outline: none
   &__line
     position: relative
     display: block
-    height: 2px
+    height: 1.08vw
     width: 100%
-    background: $accent
+    background: $main-color
     +trans
     &::after, &::before
       content: ''
       position: absolute
       left: 0
       display: block
-      height: 2px
+      height: 1.08vw
       width: 100%
-      background: $accent
+      background: $main-color
       +trans
     &::before
-      top: -6px
+      top: -2.71vw
     &::after
-      top: 6px
+      top: 2.71vw
   &.active
     .nav-toggle__line
       background: transparent
@@ -63,3 +128,18 @@
       &::before
         top: 0
         transform: rotate(-45deg)
+
+.nav-overlay
+  position: fixed
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
+  z-index: 9
+  background-color: rgba($main-color, 0.8)
+  opacity: 0
+  visibility: hidden
+  +trans
+  &.is-active
+    opacity: 1
+    visibility: visible
