--- a/src/sass/blocks/small-blocks/logo.sass
+++ b/src/sass/blocks/small-blocks/logo.sass
@@ -1,3 +1,9 @@
 .logo
   img
     width: 25.4rem
+    +lg-block
+      width: 22rem
+    +md-block
+      width: 29.34vw
+    +r(576)
+      width: 130px
