--- a/src/sass/blocks/small-blocks/phone.sass
+++ b/src/sass/blocks/small-blocks/phone.sass
@@ -1,10 +1,16 @@
 .phone
   text-align: right
+  +md-block
+    text-align: left
   &__descr
     margin: 0
     font-size: 1.7rem
+    +md-block
+      font-size: 1rem
   &__tel
     font-size: 3.2rem
     font-weight: 700
     color: $main-color
     line-height: 1
+    +md-block
+      font-size: 1.7rem
