Ready home page

--- a/src/sass/blocks/small-blocks/small-blocks.sass
+++ b/src/sass/blocks/small-blocks/small-blocks.sass
@@ -1,3 +1,11 @@
 @import 'logo'
 @import 'social'
 @import 'phone'
+@import 'section'
+@import 'slider'
+
+.table-responsive
+  overflow-x: auto
+  +smooth-scroll
+  table
+    white-space: nowrap
