--- a/src/sass/common/_variables.sass
+++ b/src/sass/common/_variables.sass
@@ -2,6 +2,9 @@
 $main-color: #1c3156
 $accent: #b5163a
 
+$gray: #c3c3c3
+$gray-light: #d6d6d6
+
 // Fonts
 $main-font: 'Helvetica Neue', Arial, sans-serif
 
