--- a/src/sass/scaffolding.sass
+++ b/src/sass/scaffolding.sass
@@ -57,6 +57,41 @@ section
   +md-block
     padding: 4.35vw 0
 
+h1, h2, h3, h4, h5, h6
+  line-height: 1.3
+h2
+  font-size: 5.6rem
+  +lg-block
+    font-size: 4.6rem
+  +md-block
+    font-size: 6.84vw
+h3
+  font-size: 3.8rem
+  +md-block
+    font-size: 4.67vw
+
+b, strong
+  font-weight: 700
+
+table
+  width: 100%
+  thead
+    tr
+      border-color: #000
+  th
+    font-size: 1.8rem
+    border-bottom: 1px solid #000
+    padding-right: 0.5rem
+    +md-block
+      font-size: 0.8rem
+  tr
+    border-bottom: 2px solid $gray-light
+  td
+    padding: 0.5rem
+    padding-left: 0
+    +md-block
+      font-size: 0.7rem
+
 /* Hidden element */
 .visually-hidden
   position: absolute
