--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -18,3 +18,7 @@
 @import 'blocks/header/header'
 @import 'blocks/hero/hero'
 @import 'blocks/about/about'
+@import 'blocks/news/last-news'
+@import 'blocks/championship/championship'
+@import 'blocks/partners/partners'
+@import 'blocks/footer/footer'
