--- a/src/sass/blocks/small-blocks/section.sass
+++ b/src/sass/blocks/small-blocks/section.sass
@@ -7,3 +7,9 @@
       margin-bottom: 4.37vw
       padding-bottom: 2vw
       border-width: 0.54vw
+
+.single-news
+  .hero
+    min-height: 58rem
+    +md-block
+      min-height: auto
