--- a/src/sass/blocks/small-blocks/small-blocks.sass
+++ b/src/sass/blocks/small-blocks/small-blocks.sass
@@ -2,7 +2,9 @@
 @import 'social'
 @import 'phone'
 @import 'section'
+@import 'page'
 @import 'slider'
+@import 'breadcrumbs'
 
 .table-responsive
   overflow-x: auto
