--- a/src/sass/blocks/footer/footer.sass
+++ b/src/sass/blocks/footer/footer.sass
@@ -14,6 +14,8 @@
     +md-block
       font-size: 1rem
       margin-bottom: vw(20)
+    p
+      font-weight: 700
   &__right
     font-size: 1.8rem
     text-align: right
