--- a/src/sass/scaffolding.sass
+++ b/src/sass/scaffolding.sass
@@ -59,7 +59,7 @@ section
 
 h1, h2, h3, h4, h5, h6
   line-height: 1.3
-h2
+h1, h2
   font-size: 5.6rem
   +lg-block
     font-size: 4.6rem
@@ -83,14 +83,16 @@ table
     border-bottom: 1px solid #000
     padding-right: 0.5rem
     +md-block
-      font-size: 0.8rem
+      font-size: 0.6rem
+      padding: 0
   tr
     border-bottom: 2px solid $gray-light
   td
     padding: 0.5rem
     padding-left: 0
     +md-block
-      font-size: 0.7rem
+      font-size: 0.6rem
+      padding-right: 0
 
 /* Hidden element */
 .visually-hidden
