--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -22,3 +22,4 @@
 @import 'blocks/championship/championship'
 @import 'blocks/partners/partners'
 @import 'blocks/footer/footer'
+@import 'blocks/get-in-touch/get-in-touch'
