--- a/src/sass/blocks/small-blocks/section.sass
+++ b/src/sass/blocks/small-blocks/section.sass
@@ -8,8 +8,15 @@
       padding-bottom: 2vw
       border-width: 0.54vw
 
-.single-news
+.single
   .hero
     min-height: 58rem
     +md-block
       min-height: auto
+
+.post-type-archive-event
+  .last-news
+    &:first-of-type
+      padding-bottom: 3.5rem
+      +md-block
+        padding-bottom: vw(40)
