--- a/src/sass/blocks/news/news-card.sass
+++ b/src/sass/blocks/news/news-card.sass
@@ -4,6 +4,8 @@
   margin-bottom: 7rem
   +md-block
     margin-bottom: 7.6vw
+    &:last-child
+      margin-bottom: 0
   &__img-wrap
     margin-bottom: 3rem
     +md-block
