started make about page

--- a/src/sass/blocks/small-blocks/section.sass
+++ b/src/sass/blocks/small-blocks/section.sass
@@ -8,6 +8,12 @@
       padding-bottom: 2vw
       border-width: 0.54vw
 
+.s
+  &-team
+    padding-top: 10rem
+    +md-block
+      padding-top: vw(120)
+
 .single
   .hero
     min-height: 58rem
