--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -23,3 +23,5 @@
 @import 'blocks/partners/partners'
 @import 'blocks/footer/footer'
 @import 'blocks/get-in-touch/get-in-touch'
+@import 'blocks/advantages/advantages'
+@import 'blocks/team/team'
