--- a/src/sass/blocks/hero/hero.sass
+++ b/src/sass/blocks/hero/hero.sass
@@ -24,9 +24,9 @@
     background-image: linear-gradient(90deg, rgba(#817d97, 1), rgba(#fff, 0))
     mix-blend-mode: multiply
   &__content
-    max-width: 55rem
-    +md-block
-      max-width: 56.52vw
+    //max-width: 55rem
+    //+md-block
+    //  max-width: 56.52vw
   &__title
     display: inline-block
     margin: 0
@@ -41,7 +41,7 @@
       content: ''
       display: block
       width: 100%
-      max-width: 54rem
+      //max-width: 54rem
       height: 1.8rem
       margin: 2rem 0 3rem
       background-color: $accent
