--- a/src/sass/blocks/partners/partners.sass
+++ b/src/sass/blocks/partners/partners.sass
@@ -4,9 +4,24 @@
   &__item
     +col
     width: calc((100% / 5) - 70px)
+    text-align: center
     +md-block
       width: 100%
       text-align: center
       margin-bottom: 10.86vw
       &:last-child
         margin-bottom: 0
+  &--page
+    margin-top: 10rem
+    +md-block
+      margin-top: 0
+    .partners
+      &__item
+        width: calc((100% / 3) - 70px)
+        flex-grow: 1
+        margin-bottom: 11rem
+        +md-block
+          width: 100%
+          margin-bottom: 10.86vw
+          &:last-child
+            margin-bottom: 0
