--- a/src/sass/scaffolding.sass
+++ b/src/sass/scaffolding.sass
@@ -18,14 +18,10 @@
 
 /* Common styles */
 html
-  height: 100%
   font-size: 62.5%
+  overflow-x: hidden
   +md-block
-    //font-size: 1vw
-    //font-size: calc(1px + 1vw)
     font-size: calc(16px + (23 - 16) * (100vw - 320px) / (920 - 320))
-  +r(576)
-    //font-size: calc(6px + 1vw)
 
 body
   margin: 0
@@ -115,7 +111,7 @@ table
 
 .container, .site-main
   +wrapper
-  +r(1560)
+  +r(1760)
     max-width: 1200px
   +r(1230)
     max-width: 82.6vw
