--- a/src/sass/blocks/about/about.sass
+++ b/src/sass/blocks/about/about.sass
@@ -9,6 +9,8 @@
     p
       margin-bottom: 3rem
       font-size: 3.8rem
+      +lg-block
+        font-size: 3rem
       +md-block
         margin-bottom: 0.65rem
         font-size: 4.67vw
