--- a/src/sass/blocks/small-blocks/page.sass
+++ b/src/sass/blocks/small-blocks/page.sass
@@ -1,6 +1,8 @@
 .page-content
   font-size: 3.8rem
   line-height: 1.1
+  +lg-block
+    font-size: 3rem
   +md-block
     font-size: vw(43)
   &:last-child
