--- a/src/sass/scaffolding.sass
+++ b/src/sass/scaffolding.sass
@@ -20,6 +20,8 @@
 html
   font-size: 62.5%
   overflow-x: hidden
+  +lg-block
+    font-size: 8px
   +md-block
     font-size: calc(16px + (23 - 16) * (100vw - 320px) / (920 - 320))
 
@@ -71,11 +73,12 @@ b, strong
 
 table
   width: 100%
+  font-size: 2rem
   thead
     tr
       border-color: #000
   th
-    font-size: 1.8rem
+    font-size: 2.25rem
     border-bottom: 1px solid #000
     padding-right: 0.5rem
     +md-block
