--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -25,3 +25,5 @@
 @import 'blocks/get-in-touch/get-in-touch'
 @import 'blocks/advantages/advantages'
 @import 'blocks/team/team'
+@import 'blocks/services/services'
+@import 'blocks/search/search'
