Ready all pages

--- a/src/sass/blocks/championship/championship.sass
+++ b/src/sass/blocks/championship/championship.sass
@@ -15,3 +15,20 @@
     color: $accent
     &:hover, &:focus
       color: rgba($accent, 0.7)
+
+.championship
+  margin-top: 8rem
+  +md-block
+    margin-top: vw(80)
+  &__title
+    max-width: 46rem
+    padding-bottom: 1rem
+    font-size: 4.4rem
+    border-bottom: 1rem solid $accent
+    +md-block
+      font-size: vw(62)
+      border-width: vw(13)
+  .resource-dropdown
+    margin-bottom: 4rem
+    +md-block
+      margin-bottom: vw(80)
