--- a/src/sass/blocks/small-blocks/page.sass
+++ b/src/sass/blocks/small-blocks/page.sass
@@ -31,6 +31,10 @@
       +md-block
         width: 100%
         height: vw(420)
+  &--tax
+    padding-top: 4rem
+    +md-block
+      padding-top: vw(35)
 
 .similar-post
   +row-flex
