--- a/src/sass/blocks/small-blocks/section.sass
+++ b/src/sass/blocks/small-blocks/section.sass
@@ -26,3 +26,11 @@
       padding-bottom: 3.5rem
       +md-block
         padding-bottom: vw(40)
+
+.single-service
+  .form-search
+    margin-top: 12rem
+    border-top: 0.5rem solid $gray
+    +md-block
+      margin-top: vw(110)
+      border-width: 0.54vw
