--- a/src/sass/blocks/team/team.sass
+++ b/src/sass/blocks/team/team.sass
@@ -43,5 +43,15 @@
       font-size: 2.5rem
     +md-block
       font-size: vw(42)
+  &__text
+    text-align: left
+    font-size: 2.8rem
+    +md-block
+      font-size: vw(42)
+    p
+      &:last-child
+        margin-bottom: 0
   &.disabled
     padding-bottom: 0
+
+@import 'team-modal'
