--- a/src/sass/common/_variables.sass
+++ b/src/sass/common/_variables.sass
@@ -4,6 +4,8 @@ $accent: #b5163a
 
 $gray: #c3c3c3
 $gray-light: #d6d6d6
+$gray-2: #b3b2b2
+$blue: #0565ad
 
 // Fonts
 $main-font: 'Helvetica Neue', Arial, sans-serif
