--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -27,3 +27,4 @@
 @import 'blocks/team/team'
 @import 'blocks/services/services'
 @import 'blocks/search/search'
+@import 'blocks/resources/resources'
