--- a/src/sass/common/_libs.sass
+++ b/src/sass/common/_libs.sass
@@ -1,2 +1,3 @@
 @import 'node_modules/bootstrap/scss/bootstrap-reboot'
 @import 'node_modules/swiper/css/swiper.min'
+@import 'node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min'
