--- a/src/sass/scaffolding.sass
+++ b/src/sass/scaffolding.sass
@@ -35,6 +35,8 @@ body
   color: $main-color
   overflow-x: hidden
   letter-spacing: -0.01em
+  +md-block
+    font-size: 1rem
 
 img
   max-width: 100%
