--- a/src/sass/scaffolding.sass
+++ b/src/sass/scaffolding.sass
@@ -18,8 +18,8 @@
 
 /* Common styles */
 html
+  height: 100%
   font-size: 8px
-  overflow-x: hidden
   +md-block
     font-size: calc(16px + (23 - 16) * (100vw - 320px) / (920 - 320))
 
