Added filter for news. Fix bug

--- a/src/sass/blocks/small-blocks/filter-dropdown.sass
+++ b/src/sass/blocks/small-blocks/filter-dropdown.sass
@@ -1,4 +1,4 @@
-.resource-dropdown
+.filter-dropdown
   position: relative
   max-width: 46rem
   margin: 4rem 0 2rem
@@ -6,7 +6,7 @@
     max-width: none
     margin: vw(45) 0 vw(80)
   &:hover
-    .resource-dropdown__body
+    .filter-dropdown__body
       opacity: 1
       visibility: visible
   &__head
