--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,8 +5,8 @@
 
 @import 'common/variables'
 @import 'common/mixins'
-@import 'common/smart-grid'
 @import 'common/libs'
+@import 'common/smart-grid'
 
 @import 'fonts'
 @import 'scaffolding'
@@ -28,3 +28,4 @@
 @import 'blocks/services/services'
 @import 'blocks/search/search'
 @import 'blocks/resources/resources'
+@import 'blocks/course/course'
