--- a/src/sass/blocks/team/team.sass
+++ b/src/sass/blocks/team/team.sass
@@ -1,57 +1,14 @@
+@import 'team-filter'
+@import 'team-card'
+@import 'team-list'
+
 .team
   padding-bottom: 6rem
   +md-block
     padding-bottom: vw(100)
   .swiper-pagination
     bottom: 0
-  &__item
-    text-align: center
-  &__img-wrap
-    margin-bottom: 3rem
-    +md-block
-      margin-bottom: vw(45)
-    img
-      border-radius: 50%
-      width: 27rem
-      +md-block
-        width: vw(480)
-  &__name
-    margin: 0
-    font-size: 3.5rem
-    line-height: 1
-    +lg-block
-      font-size: 3rem
-    +md-block
-      font-size: vw(54)
-      line-height: 1.3
-  &__position
-    margin-bottom: 1.5rem
-    font-size: 2.8rem
-    color: $accent
-    line-height: 1
-    +lg-block
-      font-size: 2.5rem
-    +md-block
-      margin-bottom: vw(25)
-      font-size: vw(42)
-  &__more
-    display: inherit
-    font-size: 2.8rem
-    color: $main-color
-    text-decoration: underline
-    +lg-block
-      font-size: 2.5rem
-    +md-block
-      font-size: vw(42)
-  &__text
-    text-align: left
-    font-size: 2.8rem
-    +md-block
-      font-size: vw(42)
-    p
-      &:last-child
-        margin-bottom: 0
-  &.disabled
-    padding-bottom: 0
+  .team-card
+    margin-bottom: 0
 
 @import 'team-modal'
