Added new pages

--- a/src/sass/blocks/small-blocks/page.sass
+++ b/src/sass/blocks/small-blocks/page.sass
@@ -31,6 +31,14 @@
       +md-block
         width: 100%
         height: vw(420)
+  .wp-block-table
+    width: 191.3rem
+    margin: 7.5rem 0 calc(7.5rem - 16px)
+    +lg-block
+      width: 146.3rem
+    +md-block
+      width: 100%
+      margin: vw(80) 0 calc(8.69vw - 16px)
   &--tax
     padding-top: 4rem
     +md-block
