--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -29,3 +29,4 @@
 @import 'blocks/search/search'
 @import 'blocks/resources/resources'
 @import 'blocks/course/course'
+@import 'blocks/useful-list/useful-list'
