--- a/src/sass/blocks/nav.sass
+++ b/src/sass/blocks/nav.sass
@@ -77,7 +77,7 @@
         opacity: 1
         visibility: visible
     &.current-menu-item
-      a
+      > a
         position: relative
         &::after
           content: ''
