--- a/src/sass/blocks/partners/partners-card.sass
+++ b/src/sass/blocks/partners/partners-card.sass
@@ -12,3 +12,12 @@
     +md-block
       justify-content: center
       margin-bottom: vw(30)
+  &__title
+    a
+      color: inherit
+      &:hover, &:focus
+        color: $accent
+  &__more
+    text-decoration: underline
+    font-size: 2.8rem
+    color: $main-color
